# interpreter-agent-eval

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml  requirements.txt  setup.py
config/: config.template  translation_brief_example.txt  user_context_en_example.txt  user_context_es_example.txt
examples/: advanced_usage.py  basic_usage.py  data_handling_demo.py
scripts/: analyze_results.py  augment_data.py  augment_maps_data.py  inspect_failures.py  re_evaluate_results.py  run_custom_eval.py
src/interpreter_agent_eval/: __init__.py  evaluator.py  interpreter.py  user.py
src/interpreter_agent_eval/models/: __init__.py  evaluation.py
src/interpreter_agent_eval/prompts/: templates.py
src/interpreter_agent_eval/providers/: __init__.py  base.py  friendli.py  google_ai.py  openai.py  openrouter.py  vllm.py
src/interpreter_agent_eval/utils/: __init__.py  data_handler.py  language_verification.py
tests/: test_basic.py
